# clangd-lsp-proxy

./: .gitignore  .rumdl.toml  CLAUDE.md  LICENSE  README.md  pyproject.toml
plugin/: .lsp.json  .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/skills/switch-clangd-config/: SKILL.md
src/clangd_lsp_proxy/: __init__.py  _client.py  backend.py  cli.py  config_resolver.py  control.py  document_store.py  jsonrpc.py  mcp_server.py  proxy.py
tests/: conftest.py  test_backend.py  test_cli.py  test_client.py  test_config_resolver.py  test_control.py  test_document_store.py  test_jsonrpc.py  test_proxy.py
