[project]
name = "clangd-lsp-proxy"
version = "0.1.0"
description = "LSP proxy for clangd with runtime backend switching"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ricardo Barbedo", email = "ricardo@barbedo.me" }]
dependencies = [
  "cyclopts>=4.11.2",
  "fastmcp>=3.2.4",
  "pydantic>=2.13.4",
]

[project.scripts]
clangd-lsp-proxy = "clangd_lsp_proxy.cli:proxy_main"
clangd-lsp-proxy-ctl = "clangd_lsp_proxy.cli:ctl_main"
clangd-lsp-proxy-mcp = "clangd_lsp_proxy.cli:mcp_main"

[dependency-groups]
dev = [
  "pytest>=9",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.12",
  "rumdl>=0.1.91",
  "ty>=0.0.35",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
